# pixify

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.prod  LICENSE  README.md  package-lock.json  pyproject.toml  requirements.dev.txt  requirements.txt
src/: __init__.py  app.py  auth.py  pixify.py  pyproject.toml  routes.py  secrets.py  test_pixify.py  utils.py
